--- a/index.html
+++ b/index.html
@@ -25,21 +25,26 @@
           </h3>
         </div>
       </div>
+      
       <div class="board">
       </div>
+   
     </section>
+    
     <div class="modal">
       <div class="start-game">
         <h3>Welcome to the Snake Game</h3>
         <button class="btn btn-start">start Game</button>
       </div>
       <div class="game-over">
-        <h3>Game game-over</h3>
+        <h3>Game-over</h3>
         <button class="btn btn-restart">Re-start Game</button>
       </div>
     </div>
+  
   </main>
   <script src="snake.js"></script>
 </body>
+
 
 </html>
